made some responsive change

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </ul>
         </div>
         <div>
-          <a class="btn btn-success text-white text-lg "
+          <a class="btn btn-error text-white text-sm "
             >Login</a
           >
         </div>
@@ -444,7 +444,7 @@
 
     <!-- footer section -->
     
-    <footer class="footer bg-black text-white text-base-content flex flex-row pl-8 py-14 md:px-40 manrope-font md:justify-between mt-8">
+    <footer class="footer relative bg-black text-white text-base-content flex flex-col md:flex-row pl-8 py-14 md:px-40 manrope-font md:justify-between mt-8">
       <nav>
         <div class="space-x-4">
           <a class="link link-hover">Download Now</a>
@@ -457,7 +457,7 @@
           <a class="link link-hover">Carreers</a>
           <a class="link link-hover">Privacy Policy</a>
         </div>
-        <div class="text-[#D9DBE1] text-xs mt-8 order-2">@ 2025-All rights reserved to Nurul Alam</div>
+        <div class="text-[#D9DBE1] text-xs mt-8 absolute bottom-0 md:static">@ 2025-All rights reserved to Nurul Alam</div>
       </nav>
       <nav>
         <h6 class="font-medium">Get the App</h6>
